# calculator_cpp

./: CMakeLists.txt
cmakemodules/: Findlibadd_cpp.cmake  Findlibmul_cpp.cmake
include/: calculator.h
src/: calculator.cpp  main.cpp
